Fix broken input field

--- a/scss/Appointment.scss
+++ b/scss/Appointment.scss
@@ -136,6 +136,6 @@
   width: 100%;
 }
 
-.appointment__main-create-input:focus {
+.appointment__create-input:focus {
   outline: none;      
 }
