--- a/styles.css
+++ b/styles.css
@@ -157,7 +157,7 @@ ol, ul {
   margin-bottom: 1rem;
   width: 100%; }
 
-.appointment__main-create-input:focus {
+.appointment__create-input:focus {
   outline: none; }
 
 .button {
